<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="24dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            app:counterEnabled="true"
            app:counterMaxLength="100" >

            <com.xw.repo.XEditText
                android:id="@+id/loginView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/auth_login"
                android:inputType="textEmailAddress"
                android:maxLength="100"
                android:padding="8dp"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            app:counterEnabled="true"
            app:counterMaxLength="100" >

            <com.xw.repo.XEditText
                android:id="@+id/passwordView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/auth_password"
                android:inputType="textPassword"
                android:maxLength="100"
                android:padding="8dp"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:padding="16dp"
            android:background="@drawable/custom_btn"
            android:text="@string/sign_in"
            android:textColor="@color/textStandardWhiteBackgroundColor" />

        <Button
            android:id="@+id/btnRegist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="8dp"
            android:padding="16dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:background="@android:color/transparent"
            android:text="@string/btn_link_to_register"
            android:textSize="12sp"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
