<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="24dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:errorEnabled="true"
            app:boxBackgroundMode="filled"
            app:counterEnabled="true"
            app:counterMaxLength="100">

            <com.xw.repo.XEditText
                android:id="@+id/nameView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@android:color/transparent"
                android:hint="@string/regist_name"
                android:inputType="textEmailAddress"
                android:maxLength="100"
                android:paddingTop="16dp"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:errorEnabled="true"
            app:boxBackgroundMode="filled"
            app:counterEnabled="true"
            app:counterMaxLength="150" >

            <com.xw.repo.XEditText
                android:id="@+id/loginView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@android:color/transparent"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
                android:hint="@string/regist_login"
                android:maxLength="150"
                android:paddingTop="16dp"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:errorEnabled="true"
            app:boxBackgroundMode="filled"
            app:counterEnabled="true"
            app:counterMaxLength="100" >

            <com.xw.repo.XEditText
                android:id="@+id/emailView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@android:color/transparent"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789@./"
                android:hint="@string/regist_email"
                android:inputType="textEmailAddress"
                android:maxLength="100"
                android:paddingTop="16dp"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:paddingTop="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:errorEnabled="true"
            app:boxBackgroundMode="filled"
            app:counterEnabled="true"
            app:counterMaxLength="100" >

            <com.xw.repo.XEditText
                android:id="@+id/passwordView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@android:color/transparent"
                android:hint="@string/regist_password"
                android:inputType="textPassword"
                android:maxLength="100"
                android:paddingTop="16dp"
                android:singleLine="true"
                app:x_disableClear="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnRegist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/custom_btn"
            android:padding="16dp"
            android:text="@string/sign_up"
            android:textColor="@color/textStandardWhiteBackgroundColor" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btnGoogleLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/btnFacebookLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="8dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:background="@android:color/transparent"
            android:text="@string/btn_link_to_login"
            android:textSize="12sp"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>