<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="vertical"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        >
        <TextView
            android:id="@+id/name_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_name" />

        <EditText
            android:id="@+id/name_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:textColor="@color/textStandardBlackBackgroundColor"
            android:textSize="16sp"
            tools:ignore="LabelFor"
            tools:text="Иван Иванов" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="?android:attr/listDivider" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="vertical"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        >

        <TextView
            android:id="@+id/phone_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_phone" />

        <EditText
            android:id="@+id/phone_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:singleLine="true"
            android:textColor="@color/textStandardBlackBackgroundColor"
            android:textSize="16sp"
            tools:text="+7(934)789-56-78"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="?android:attr/listDivider" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="vertical"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        >

        <TextView
            android:id="@+id/email_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_email" />

        <EditText
            android:id="@+id/email_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/textStandardBlackBackgroundColor"
            android:textSize="16sp"
            tools:text="ivan_ivanov@mail.ru"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="?android:attr/listDivider" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="vertical"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        >

        <TextView
            android:id="@+id/birthday_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_birthday" />

        <EditText
            android:id="@+id/birthday_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date|datetime|textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/textStandardBlackBackgroundColor"
            android:textSize="16sp"
            tools:text="1999.12.24"
            android:autofillHints="no"
            tools:ignore="LabelFor" />

        <View
            android:id="@+id/divider6"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="?android:attr/listDivider" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="vertical"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        >

        <TextView
            android:id="@+id/reg_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_reg_date" />

        <TextView
            android:id="@+id/reg_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textColor="@color/textStandardBlackBackgroundColor"
            android:textSize="16sp"
            tools:text="08-08-2008 18:06:48" />

        <View
            android:id="@+id/divider5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="?android:attr/listDivider" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/enabled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="vertical"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        >

        <TextView
            android:id="@+id/enabled_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_enabled" />

        <TextView
            android:id="@+id/enabled_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:singleLine="true"
            android:textColor="@color/textStandardBlackBackgroundColor"
            android:textSize="16sp"
            tools:ignore="LabelFor"
            tools:text="Enable" />

        <View
            android:id="@+id/divider7"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="?android:attr/listDivider" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="52dp">

        <ImageButton
            android:id="@+id/btnSave"
            android:layout_width="120dp"
            android:layout_height="52dp"
            android:layout_margin="8dp"
            android:background="@drawable/save_selector_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/btnSave"
            app:layout_constraintEnd_toEndOf="@+id/btnSave"
            app:layout_constraintStart_toStartOf="@+id/btnSave"
            app:layout_constraintTop_toTopOf="@+id/btnSave" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>